k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: font-scanner
  labels:
    name: font-scanner
    environment: production
