k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: font-scanner
  namespace: font-scanner
  labels:
    app: font-scanner
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: font-scanner
---
apiVersion: v1
kind: Service
metadata:
  name: font-scanner-headless
  namespace: font-scanner
  labels:
    app: font-scanner
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 3000
    targetPort: http
    protocol: TCP
  selector:
    app: font-scanner
